# DFF

./: CMakeLists.txt  DOCKER.md  Dockerfile  README.md  dff-auto-report.py  dff-gui.py  dff-pro-gui.py  dff-pro-unsuported.py  dff-pro.py  dff-report.py  dff.py
dff/: CMakeLists.txt
dff/api/: CMakeLists.txt  __init__.py  destruct
dff/api/apswvfs/: CMakeLists.txt  __init__.py  apswvfs.py
dff/api/crashreporter/: CMakeLists.txt  handler.cpp  handler.hpp  libcrashhandler.py  libcrashreporter.i
dff/api/datatype/: CMakeLists.txt  __init__.py  datatype.cpp  libdatatype.i  libdatatype.py  magichandler.py  mimetree.py
dff/api/devices/: CMakeLists.txt  __init__.py  dbushaldev.py  device.cpp  devices.py  libdevices.i  libdevices.py  logicaldrive.cpp  udevice.cpp  wmidev.cpp
dff/api/events/: CMakeLists.txt  __init__.py  eventhandler.cpp  libevents.i  libevents.py
dff/api/exceptions/: CMakeLists.txt  __init__.py  exceptions.cpp  libexceptions.i  libexceptions.py  patch.py
dff/api/filters/: CMakeLists.txt  astnodes.cpp  astnodes.hpp  dictionnary.cpp  dictionnary.hpp  factory.cpp  factory.hpp  filter.cpp  libfilters.i  libfilters.py  parser.cpp  parser.hpp  parser.y  parserparam.hpp  scanner.cpp  scanner.hpp  scanner.l  timeline.cpp  typeparser.hpp
dff/api/gui/: CMakeLists.txt  __init__.py  thumbnail.py
dff/api/include/: argument.hpp  cache.hpp  config.hpp  confmanager.hpp  constant.hpp  datatype.hpp  datetime.hpp  device.hpp  eventhandler.hpp  exceptions.hpp  export.hpp  fastsearch.hpp  fdmanager.hpp  filemapping.hpp  filter.hpp  fso.hpp  index.hpp  iostat.hpp  libbfio_wrapper.hpp  logicaldrive.hpp  magichandler.hpp  mfso.hpp  node.hpp  path.hpp  pyrun.swg  rc.hpp  rootnode.hpp  search.hpp  tags.hpp  threading.hpp  timeline.hpp  typesconv.hpp  udevice.hpp  variant.hpp  vfile.hpp.orig  vfs.hpp  vlink.hpp  wmidev.hpp  wstdint.i
dff/api/loader/: CMakeLists.txt  __init__.py  loader.py
dff/api/magic/: CMakeLists.txt  __init__.py  apprentice.c  config.h  config.h.in  file.h  funcs.c  getline.c  libmagic.i  magic.c  magic.h  magic.mgc  magic.py  magichandler.cpp  magichandler.hpp  magict  print.c  softmagic.c  test.cpp
dff/api/manager/: CMakeLists.txt  __init__.py  manager.py
dff/api/module/: CMakeLists.txt  __init__.py  manager.py  module.py  script.py
dff/api/report/: fragments.py  manager.py  page.py
dff/api/search/: CMakeLists.txt  __init__.py  boyer_moore.cpp  boyer_moore.hpp  libsearch.i  libsearch.py  pattern.hpp  search.cpp
dff/api/taskmanager/: CMakeLists.txt  __init__.py  processus.py  scheduler.py  taskmanager.py
dff/api/tree/: CMakeLists.txt  TwoThreeNode.cpp  TwoThreeNode.hpp  TwoThreeTree.cpp  TwoThreeTree.hpp  __init__.py  libtree.i  libtree.py
dff/api/types/: CMakeLists.txt  __init__.py  argument.cpp  config.cpp  confmanager.cpp  constant.cpp  datetime.cpp  libtypes.i  libtypes.py  path.cpp  results.cpp  threading.cpp  variant.cpp
dff/api/vfs/: CMakeLists.txt  CMakeLists.txt.ok  __init__.py  cache.cpp  datatype.cpp  exportcsv.py  extract.py  fdmanager.cpp  filemapping.cpp  fso.cpp  iodevice.py  iostat.cpp  libbfio_wrapper.cpp  libvfs.i  libvfs.py  mfso.cpp  node.cpp  rc.cpp  rootnode.cpp  tags.cpp  tags.cpp.old  vfile.cpp  vfile.cpp.cache  vfs.cpp  vfs.py  vlink.cpp
dff/modules/: CMakeLists.txt  __init__.py  categorize.py
dff/modules/analyse/: CMakeLists.txt  __init__.py  analyse.py  android.old  deleteditems.py  malwareanalyse.py
dff/modules/archive/: CMakeLists.txt
dff/modules/builtins/: CMakeLists.txt  __init__.py  batch.py  cd.py  fg.py  fileinfo.py  find.py  history.py  info.py  jobs.py  link.py  load.py  ls.py  man.py  open.py  show_cwd.py  show_db.py
dff/modules/connector/: CMakeLists.txt  __init__.py
dff/modules/databases/: CMakeLists.txt  __init__.py
dff/modules/export/: CMakeLists.txt  exportcsv.py  extract.py
dff/modules/fs/: CMakeLists.txt  __init__.py  spare.py
dff/modules/hash/: CMakeLists.txt  __init__.py  hash.py
dff/modules/i18n/: CMakeLists.txt  Dff_pro_modules_en.ts  Dff_pro_modules_fr.qm  Dff_pro_modules_fr.ts  dff_pro_modules.pro
dff/modules/im/: CMakeLists.txt
dff/modules/mailbox/: CMakeLists.txt
dff/modules/malware/: CMakeLists.txt
dff/modules/metadata/: CMakeLists.txt  __init__.py  structparser.py
dff/modules/node/: CMakeLists.txt  cut.py  merge.py  split.py
dff/modules/ram/: CMakeLists.txt  __init__.py
dff/modules/search/: CMakeLists.txt  __init__.py
dff/modules/statistics/: CMakeLists.txt  __init__.py
dff/modules/viewer/: CMakeLists.txt  __init__.py
dff/modules/volumes/: CMakeLists.txt  __init__.py
dff/pro/: CMakeLists.txt
dff/pro/api/: CMakeLists.txt
dff/pro/modules/: CMakeLists.txt
dff/pro/ui/: CMakeLists.txt  __init__.py
dff/ui/: CMakeLists.txt  __init__.py  conf.py  history.py  redirect.py  ui.py
dff/ui/console/: CMakeLists.txt  __init__.py  complete_raw_input.py  completion.py  console.py  line_to_arguments.py  utils.py
dff/ui/gui/: CMakeLists.txt  __init__.py  gui.py  mainwindow.py  thumbnail.py  translator.py
doc/: CMakeLists.txt
doc/developer/: CMakeLists.txt  Doxyfile  Doxyfile.in  dff.coverpage
doc/developer/html/: annotated.html  annotated_dup.js  class_d_f_f_1_1_attributes_handler-members.html  class_d_f_f_1_1_attributes_handler.html  class_d_f_f_1_1_attributes_handler.js  class_d_f_f_1_1_attributes_handlers-members.html  class_d_f_f_1_1_attributes_handlers.html  class_d_f_f_1_1_attributes_handlers.js  class_d_f_f_1_1_file_mapping-members.html  class_d_f_f_1_1_file_mapping.html  class_d_f_f_1_1_file_mapping.js  class_d_f_f_1_1_node-members.html  class_d_f_f_1_1_node.html  class_d_f_f_1_1_node.js  class_d_f_f_1_1_node__coll__graph.map  class_d_f_f_1_1_node__coll__graph.md5  class_d_f_f_1_1_node_manager-members.html  class_d_f_f_1_1_node_manager.html  class_d_f_f_1_1_node_manager.js  class_d_f_f_1_1_v_f_s-members.html  (+67 more)
doc/guide/: CMakeLists.txt  dff_guide.qhp.in  dff_guide_en.qhp  dff_guide_fr.qhp
doc/man/: CMakeLists.txt  dff.1
doc/qhc/: CMakeLists.txt  dff_developer.qch  dff_doc.qhc  dff_doc.qhcp  dff_doc.qhcp.in  dff_guide_en.qch  dff_guide_fr.qch
(+999 files in other folders)
