# DFF -- An Open Source Digital Forensics Framework
# Copyright (C) 2009-2012 ArxSys
# Author(s):
#  Jeremy MOUNIER <jmo@digital-forensic.org>

add_subdirectory(images)

install_file(
  bootstrap.min.css
  bootstrap-responsive.min.css
  chat.css
  colorbox.css
  custom.css  
  DT_bootstrap.css
  justifiedGallery.css
)
