# DFF -- An Open Source Digital Forensics Framework
# Copyright (C) 2009-2012 ArxSys
# Author(s):
#  Jeremy MOUNIER <jmo@digital-forensic.org>

add_subdirectory(coffee)

install_file(
  bootstrap.min.js
  DDT_bootstrap.js
  jquery.colorbox-min.js
  jquery.dataTables.js
  jquery.js
  jquery.min.js
  jquery.scrollTo.js
  justifiedGallery.js
  namespace.min.js
  jquery.lazyload.js
  jquery.scrollstop.js
  spin.js
)
